# flakeid

./: .editorconfig  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
examples/: README.md  generate.rs
src/: gen.rs  generator.rs  id.rs  lib.rs  seq.rs  serde.rs
