[package]
name = "flakeid"
version = "0.1.0"
authors = ["Anton Österberg <anton@42x.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.3"
mac_address = "1.1"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
serde_test = "1.0"